# bball-analysis

./: README.md  cli.py  pyproject.toml
bball_analysis/: context.py  http_service.py  llm.py  main.py  mappings.py  prompts.py
bball_analysis/prompts/: analysis_overview.jinja
bball_analysis/templates/: gpt_instructions.jinja  initial_user_prompt.jinja  team_selection_prompt.jinja  user_question.jinja
tests/: test_http_service.py
tests/data/: 2023-24 Milwaukee Bucks Roster and Stats _ Basketball-Reference.com.html
