[tool.poetry]
name = "bball-analysis"
version = "0.1.0"
description = ""
authors = ["Aaron Bannin <aaronbannin@Aarons-MacBook-Pro.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9, !=3.9.7"
streamlit = "^1.28.2"
openai = "^1.3.0"
click = "^8.1.7"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
jinja2 = "^3.1.2"
bs4 = "^0.0.1"
lxml = "^4.9.3"
llama-index = "^0.9.13"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "bball_analysis" }
]
